# HR-Assistant

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: params.yml
data/embeddings/: chroma.sqlite3
demo/: hr_assistant_demo.ipynb
src/hr_assistant/: main.py
src/hr_assistant/core/: config.py  document_processor.py  information_retriever.py
tests/: test_main.py
tests/core/: test_config  test_document_processor.py  test_information_retriever.py
